...
    projectId: String,
    onDismissRequest: () -> Unit,
    viewModel: AddProjectElementViewModel = hiltViewModel(),
) {
    val uiState by viewModel.uiState.collectAsStateWithLifecycle()
    var selectedTabIndex by remember { mutableStateOf(0) }
    val tabs = listOf("카테고리", "채널")
    val snackbarHostState = remember { SnackbarHostState() }

    LaunchedEffect(viewModel, projectId) {
        viewModel.initialize(projectId)
    }

...
